<resources>
    <string name="app_name">GreenBay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="green_bay">Green Bay</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fab">fab</string>
    <string name="notifications">Notifications</string>
    <string name="payments">Payments</string>
    <string name="tasks">Tasks</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="amount">Amount</string>
    <string name="please_wait">Please wait...</string>
    <string name="login">Login</string>
    <string name="loading">Loading...</string>
    <string name="no_items_yet">No items yet</string>
    <string name="optional_phone_number">(Optional) Phone Number</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
</resources>