<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/landingFragment"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/paymentsFragment"
        android:icon="@drawable/payments"
        android:title="@string/payments" />
    <item
        android:id="@+id/tasksFragment"
        android:icon="@drawable/task"
        android:title="@string/tasks" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/account"
        android:title="@string/profile" />
</menu>