<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.frags.NotificationsFragment">

  <androidx.recyclerview.widget.RecyclerView
      android:layout_width="match_parent"
      android:id="@+id/notifications_rv"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      tools:listitem="@layout/notification_item"
      android:layout_height="match_parent"/>
  <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:id="@+id/notifications_progress_bar"
    android:visibility="gone"
    tools:visibility="visible"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:text="@string/loading"
    android:id="@+id/notifications_loading_tv"
    android:visibility="gone"
    tools:visibility="visible"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/notifications_progress_bar"
    app:layout_constraintStart_toStartOf="@id/notifications_progress_bar"
    app:layout_constraintEnd_toEndOf="@id/notifications_progress_bar"/>
  <ImageView
      android:layout_width="70dp"
      android:layout_height="70dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@drawable/no_items"
      app:layout_constraintBottom_toBottomOf="parent"
      android:id="@+id/no_items_iv_notifications"
      android:visibility="gone"
      tools:visibility="visible"
      android:contentDescription="@string/no_items_yet" />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/no_items_yet"
      android:id="@+id/no_items_tv_notifications"
      android:visibility="gone"
      tools:visibility="visible"
      android:textSize="20sp"
      app:layout_constraintTop_toBottomOf="@id/notifications_progress_bar"
      app:layout_constraintStart_toStartOf="@id/notifications_progress_bar"
      app:layout_constraintEnd_toEndOf="@id/notifications_progress_bar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/add_notification_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="20dp"
        android:src="@drawable/add"
        android:contentDescription="@string/fab" />

</androidx.constraintlayout.widget.ConstraintLayout>