<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.frags.PaymentsFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:text="If you did not receive stk push, please pay via mpesa \npaybill 174379 \naccount number:house number"
        android:textSize="15sp"
        android:id="@+id/paybill_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payments_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paybill_tv"
        tools:listitem="@layout/notification_item" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/payments_progress_bar"
        android:visibility="gone"
        tools:visibility="visible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/payments_loading_tv"
        android:visibility="gone"
        tools:visibility="visible"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/payments_progress_bar"
        app:layout_constraintStart_toStartOf="@id/payments_progress_bar"
        app:layout_constraintEnd_toEndOf="@id/payments_progress_bar"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/no_items"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/no_items_iv_payments"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/no_items_yet" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_items_yet"
        android:id="@+id/no_items_tv_payments"
        android:visibility="gone"
        tools:visibility="visible"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/no_items_iv_payments"
        app:layout_constraintStart_toStartOf="@id/payments_progress_bar"
        app:layout_constraintEnd_toEndOf="@id/payments_progress_bar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_payment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab"
        android:elevation="20dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/make_payment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="20dp"
        android:src="@drawable/payment"
        android:contentDescription="@string/fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>